# buf-view

./: Cargo.toml  README.md
src/: buf_view.rs  buf_view_mut.rs  lib.rs  macros.rs
tests/: buf_view.rs  buf_view_mut.rs
